--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "80:80"
     environment:
-     - NETWORK_ACCESS: internal
+     - 'NETWORK_ACCESS=internal'
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
@@ -63,9 +63,9 @@ services:
     depends_on:
       - wikidb
     environment:
-      - WIKI_ADMIN_EMAIL: admin@example.com
-      - VIRTUAL_HOST: wiki.jlh.name
-      - VIRTUAL_PORT: 3000
+      - 'WIKI_ADMIN_EMAIL=admin@example.com'
+      - 'VIRTUAL_HOST=wiki.jlh.name'
+      - 'VIRTUAL_PORT=3000'
     volumes:
       - /srv/wiki/config.yml:/var/wiki/config.yml
       - /srv/wiki/id_rsa:/var/wiki/id_rsa
