--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,31 @@ services:
   #    - /etc/localtime:/etc/localtime:ro
   #  network_mode: "host"
 
+  letsencrypt:
+    image: linuxserver/letsencrypt
+    volumes:
+      - /srv/letsencrypt:/config
+      - /srv/certs:/config/etc/letsencrypt
+    environment:
+      - 'PUID=1000'
+      - 'PGID=1000'
+      - 'TZ=Europe/Stockholm'
+      - 'URL=jlh.name'
+      - 'SUBDOMAINS=wildcard'
+      - 'VALIDATION=dns'
+      - 'DNSPLUGIN=cloudflare'
+      - 'EMAIL=jtlex8@gmail.com'
+      - 'STAGING=false'
+
   nginx-proxy:
     image: jwilder/nginx-proxy:alpine
     ports:
       - "80:80"
-    environment:
-     - 'NETWORK_ACCESS=internal'
+      - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - /srv/certs/live/jlh.name/fullchain.pem:/etc/nginx/certs/jlh.name.crt:ro
+      - /srv/certs/live/jlh.name/privkey.pem:/etc/nginx/certs/jlh.name.key:ro
 
   sftp:
     image: atmoz/sftp
@@ -47,6 +64,7 @@ services:
       - /srv/unifi/data:/usr/lib/unifi/data
       - /srv/unifi/logs:/usr/lib/unifi/logs
 
+
   wikidb:
     image: mongo
     expose:
@@ -56,6 +74,7 @@ services:
       - 'MONGO_LOG_DIR=/dev/null'
     volumes:
       - /srv/wiki/mongo:/data/db
+
   wikijs:
     image: 'requarks/wiki:latest'
     links:
@@ -66,6 +85,7 @@ services:
       - 'WIKI_ADMIN_EMAIL=admin@example.com'
       - 'VIRTUAL_HOST=wiki.jlh.name'
       - 'VIRTUAL_PORT=3000'
+      - 'NETWORK_ACCESS=internal'
     volumes:
       - /srv/wiki/config.yml:/var/wiki/config.yml
       - /srv/wiki/id_rsa:/var/wiki/id_rsa
